# SRI

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml  scrapy.cfg  test_modules.py  test_pagination_v2.json
data/: seen_urls.txt
data/mobile/: xataka_mobile_2026-03-19.jsonl
data/pc/: xataka_pc_2026-03-11.jsonl  xataka_pc_2026-03-19.jsonl
report/: main.tex
src/extract_data/: extract.py  items.py  log.py  pipelines.py  settings.py
src/extract_data/Movile/android_dev_news/: android_dev_news.py
src/extract_data/Movile/android_developers_blog/: android_developers_blog.py
src/extract_data/Movile/android_magazine/: android_magazine.py
src/extract_data/Movile/apple_newsroom/: apple_newsroom.py
src/extract_data/Movile/google_blog_android/: google_blog_android.py
src/extract_data/Movile/gsmarena_news/: gsmarena_news.py
src/extract_data/Movile/phonearena_news/: phonearena_news.py
src/extract_data/Movile/samsung_newsroom/: samsung_newsroom.py
src/extract_data/Movile/xataka/: xataka.py
src/extract_data/github/: github.py
src/extract_data/silicon/: silicon.py
src/extract_data/spiders/mobile/apple_newsroom/: apple_newsroom.py
src/extract_data/spiders/mobile/xataka_mobile/: xataka_mobile.py
src/extract_data/wired/: wired.py
src/extract_data/xataka/: xataka.py
src/indexing/: __init__.py  indexer.py  storage.py
src/retrieval/: __init__.py  lm_retriever.py  lsi_retriever.py  query_processor.py
src/vector_db/: __init__.py  embeddings.py  vector_store.py
stats/: corpus_stats.ipynb
(+1 files in other folders)
