[project]
name = "sri"
version = "0.1.0"
description = "Sistema de Recuperación de Información — tech-news domain (mobile & PC)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy==2.14.1",
    "bs4==0.0.2",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "nltk==3.9",
    "scikit-learn==1.6",
    "langchain==1.2.10",
    "langchain-huggingface>=1.2.1",
    "chromadb",
    "onnxruntime<1.19.0",
]
